--- a/weekday.html
+++ b/weekday.html
@@ -2,7 +2,6 @@
 <html>
 
   <head>
-    <title>Til kabelo, NT love</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
   </head>
   <style>
@@ -30,7 +29,7 @@
 
     function updateContent() {
       // Set current weekday, for instance "Thursday"
-      document.querySelector('div').innerText = new Date().toLocaleDateString('en-US', {
+      document.title = document.querySelector('div').innerText = new Date().toLocaleDateString('en-US', {
         weekday: 'long'
       });
 
