--- a/weekday.html
+++ b/weekday.html
@@ -70,7 +70,9 @@
     // We need to run an update the next time we hit midnight (00:00)
     var now = new Date();
     var elapsedSinceMidnight = ((23 - now.getHours()) * 60 + (60 - now.getMinutes())) * 60 * 1000;
-    var timeUntillNextMidnight = new Date(now.getTime() + elapsedSinceMidnight);
+    var dateForNextMidnight = new Date(now.getTime() + elapsedSinceMidnight);
+    var timeUntillNextMidnight = dateForNextMidnight.getTime() - new Date().getTime();
+
     setTimeout(updateContentRecurring, timeUntillNextMidnight);
 
   </script>
